--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,10 +10,7 @@ appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=App Title
 
-# Product=Product
-# UnitPrice=Unit Price
-# QuantityPerUnit=Quantity Per Unit
-# UnitsInStock=Units In Stock
+PlaceholderInput=Filtra por ID o Nombre
 
 Supplier=Supplier
 SupplierID=Supplier ID
