--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -8,11 +8,13 @@ appTitle=App Title
 #YDES: Application description
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
-title=App Title
+title=Suppliers List
 
-PlaceholderInput=Filtra por ID o Nombre
+LabelFirstFilter=Filter by supplier or ID
+LabelSecondFilter=Filter by country
 
 Supplier=Supplier
 SupplierID=Supplier ID
+Region=Country
 
 titleDetail=Detail
