primera pantalla con filtros

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -13,8 +13,10 @@ title=Suppliers List
 LabelFirstFilter=Filter by supplier or ID
 LabelSecondFilter=Filter by country
 
+btnSearch=Search
+
 Supplier=Supplier
 SupplierID=Supplier ID
-Region=Country
+CompanyName=Company Name
 
 titleDetail=Detail
