--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -15,8 +15,18 @@ LabelSecondFilter=Filter by country
 
 btnSearch=Search
 
-Supplier=Supplier
+Supplier=Name
 SupplierID=Supplier ID
 CompanyName=Company Name
 
-titleDetail=Detail
+titleDetail=Supplier Detail
+personalDetailInfo=Information
+WorkInfo=Workplace Information
+ContactTitle=Position
+Phone=Tel.
+Address=Address
+City=City
+Country=Country
+
+
+Product=Products
