tabla detalles, dialog primario

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -19,6 +19,10 @@ Supplier=Name
 SupplierID=Supplier ID
 CompanyName=Company Name
 
+
+
+headerSupplierPage=Suppliers Page
+
 titleDetail=Supplier Detail
 personalDetailInfo=Information
 WorkInfo=Workplace Information
@@ -28,5 +32,13 @@ Address=Address
 City=City
 Country=Country
 
-
 Product=Products
+ProductName=Product name
+UnitPrice=Unit Price
+Category=Category
+
+
+
+
+
+headerProductSupplier=Supplier Products
